--- a/public/style/pages/index.css
+++ b/public/style/pages/index.css
@@ -14,6 +14,10 @@ pre >code{
   color:#FFF;
 
 }
+*{
+  margin: 0;
+  padding: 0;
+}
 code {
   display: inline-block ;
   background-color:#f3f3f3;
