--- a/public/style/components/footer.css
+++ b/public/style/components/footer.css
@@ -1,6 +1,9 @@
-.footer-div{
-  text-align:center;
+.footer-div {
+  text-align: center;
   width: 100%;
   padding: 1rem;
-  color: #888;
+  color: #999;
+}
+.footer-a {
+  color: #999;
 }
